2012-09-25 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/install.lst.ex: Adjust the syntax comment.

2012-09-25 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/test.sh.ex: New.

	* bin/template/manualpage.1.redirection.ex: New example how to
	redirect to another manual page.

	* bin/template/manualpage.1.pod.ex: (AUTHORS): Update GPL stanza.

	* bin/cygbuild.sh (CygbuildHelpShort): Add colons to AUTHOR
	section output.
	(CygbuildCmdInstallList): Add better ln-case checks.
	(CygbuildCmdTestAdditional): Add --debug option support.
	(CygbuildCmdTestAdditional): adjust path in message.
	(CygbuildCmdInstallList): Allow install.lst::FROM be directory.
	(CygbuildCmdInstallList): Use tar --dereference to copy real files.

2012-09-24 Mon  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildPatchApplyMaybe): unpatch quilt last.
	(CygbuildDefineGlobalCommands): require quilt or die.

2012-09-23 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildInstallExtraManualList): New. Add
	CYGWIN-PATCHES/manpages support.
	(CYGBUILD_HOMEPAGE_URL): Correct *.net to *.com URL.
	(CygbuildCmdInstallMain): Really, run install-after.sh last.

2012-09-22 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckBinFiles): Improve
	verbose message to notice symbolic links.

	* bin/cygbuild.sh (CygbuildFileConvertToUnix): Add missing
	slash to Perl regexp line.

2012-09-22 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::Install commands): Remove all
	import and repackage commands.
	(HELP::OPTIONAL EXTERNAL FILES::install.lst): Add ln summport.

	* bin/cygbuild.sh (CygbuildCommandMain): Remove all import and
	repackage commands
	(CygbuildDefineGlobalPerlVersion): Correct for Perl 5.14
	(CygbuildCmdInstallPatchVerify): List patches with --verbose.
	(CygbuildPatchFileQuilt): Search only under
	$CYGBUILD_DIR_CYGPATCH_RELATIVE
	(CygbuildPatchFileList): Search only under